fix title overflow project full view

--- a/src/styles/archive/projectView.module.css
+++ b/src/styles/archive/projectView.module.css
@@ -116,7 +116,6 @@
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-    justify-self: center;
 }
 
 .hero {
